fixed autofill text-color issue

--- a/client/src/scss/global.scss
+++ b/client/src/scss/global.scss
@@ -5,12 +5,14 @@
   box-sizing: border-box;
 }
 
-input:-webkit-autofill,
-input:-webkit-autofill:hover,
-input:-webkit-autofill:focus,
-input:-webkit-autofill:active {
-  transition: background-color 5000s;
-  -webkit-text-fill-color: #fff !important;
+.dark {
+  input:-webkit-autofill,
+  input:-webkit-autofill:hover,
+  input:-webkit-autofill:focus,
+  input:-webkit-autofill:active {
+    transition: background-color 5000s;
+    -webkit-text-fill-color: #fff !important;
+  }
 }
 
 /* Input Number Design */
